--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>VCS Test</title>
 </head>
 <body>
-<h1>My version COntrol Test</h1>
+<h1>My version COntrol System</h1>
 <h2> Edited </h2>
 </body>
 </html>
