--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>VCS Test</title>
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <h1>My version COntrol System</h1>
